--- a/.github/workflows/ascii-art.yaml
+++ b/.github/workflows/ascii-art.yaml
@@ -4,19 +4,50 @@ on: push
 
 jobs:
     ascii_artwork:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
 
-            - name: Install cowsay
-              run: sudo apt-get install cowsay -y
-            
-            - name: Cowsay art
-              run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWWR" >> dragon.txt
+        - name: Install cowsay
+          run: sudo apt-get install cowsay -y
+        
+        - name: Cowsay art
+          run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWWR" >> dragon.txt
 
-            - name: List files
-              run: ls -lrta
-            
-            - name: Read dragon file
-              run: cat dragon.txt
+        - name: List files
+          run: ls -lrta
+        
+        - name: Read dragon file
+          run: cat dragon.txt
+
+        - name: Upload dragon file
+          uses: actions/upload-artifact@v4
+          with:
+            name: Dragon-File
+            path: dragon.txt
+
+    ascii_test:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Download Dragon file
+          uses: actions/download-artifact@v4
+          with:
+            name: Dragon-File
+
+        - name: Test file
+          run: grep -i "dragon" dragon.txt
+
+    ascii_deploy:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy file
+          uses: actions/download-artifact@v4
+          with:
+            name: Dragon-File
+
+        - name: Read file
+          run: cat dragon.txt
+        
+        - name: Deploy file
+          run: echo "Deployment done"
