--- a/.github/workflows/ascii-art.yaml
+++ b/.github/workflows/ascii-art.yaml
@@ -29,6 +29,7 @@ jobs:
 
     ascii_test:
       runs-on: ubuntu-latest
+      needs: ascii_artwork
       steps:
         - name: Download Dragon file
           uses: actions/download-artifact@v4
@@ -40,6 +41,7 @@ jobs:
 
     ascii_deploy:
       runs-on: ubuntu-latest
+      needs: ascii_test
       steps:
         - name: Deploy file
           uses: actions/download-artifact@v4
