--- a/.github/workflows/concurrency-timeout-.yml
+++ b/.github/workflows/concurrency-timeout-.yml
@@ -1,7 +1,6 @@
 name: Demo Concurrency and timeout
 
 on:
-  push:
   workflow_dispatch:
 
 jobs:
@@ -15,4 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker hello world
-      run: docker run hello-world
+      run: |
+        sleep 600s
+        docker run hello-world
