--- a/.github/workflows/concurrency-timeout-.yml
+++ b/.github/workflows/concurrency-timeout-.yml
@@ -12,6 +12,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    concurrency:
+      group: production-group
+      cancel-in-progress: true
     steps:
     - name: Docker hello world
       run: |
