--- a/.github/workflows/matrix-demo.yml
+++ b/.github/workflows/matrix-demo.yml
@@ -6,9 +6,17 @@ on:
 jobs:
   docker:
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:  
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
+        exclude: 
+          - image: alpine
+            os: windows-latest
+        include:
+          - image: amd64/alpine
+            os: ubuntu-20-04
     runs-on: ${{ matrix.os }}
     steps:
     - name: Docker Info
