--- a/.github/workflows/matrix-demo.yml
+++ b/.github/workflows/matrix-demo.yml
@@ -12,10 +12,10 @@ jobs:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
         exclude: 
-          - image: alpine
+          - images: alpine
             os: windows-latest
         include:
-          - image: amd64/alpine
+          - images: amd64/alpine
             os: ubuntu-20-04
     runs-on: ${{ matrix.os }}
     steps:
