--- a/.github/workflows/context-demo.yml
+++ b/.github/workflows/context-demo.yml
@@ -9,20 +9,20 @@ jobs:
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run:
-        echo $GITHUB_CONTEXT
+        echo "$GITHUB_CONTEXT"
     - name: Job context
       env:
         JOB_CONTEXT: ${{ toJson(job) }}
-      run: echo $JOB_CONTEXT
+      run: echo "$JOB_CONTEXT"
     - name: Steps context
       env:
         STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo $STEPS_CONTEXT
+      run: echo "$STEPS_CONTEXT"
     - name: Runner context
       env:
         RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo $RUNNER_CONTEXT
+      run: echo "$RUNNER_CONTEXT"
     - name: Secrets context
       env:
         SECRETS_CONTEXT: ${{ toJson(secrets) }}
-      run: echo $SECRETS_CONTEXT
+      run: echo "$SECRETS_CONTEXT"
