Added if clause

--- a/.github/workflows/matrix-demo.yml
+++ b/.github/workflows/matrix-demo.yml
@@ -23,4 +23,5 @@ jobs:
       run: docker info
   
     - name: Docker hello world
+      if: runner.os == 'Linux'
       run: docker run ${{ matrix.images }}
