--- a/.github/workflows/matrix-demo.yml
+++ b/.github/workflows/matrix-demo.yml
@@ -14,9 +14,9 @@ jobs:
         exclude: 
           - images: alpine
             os: windows-latest
-        include:
-          - images: amd64/alpine
-            os: ubuntu-20-04
+        # include:
+        #   - images: alpine
+        #     os: ubuntu-20-04
     runs-on: ${{ matrix.os }}
     steps:
     - name: Docker Info
